# agent-radar

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: otel-collector-config.yaml
examples/: policy-rules.yaml
src/agent_radar/: __init__.py  cli.py  schema.py
src/agent_radar/api/: auth.py  main.py
src/agent_radar/detection/: __init__.py  clustering.py  drift.py  tensor.py
src/agent_radar/policy/: __init__.py  engine.py
src/agent_radar/scrapers/: __init__.py  base.py  bedrock.py  copilot.py  glean.py  openai.py
src/agent_radar/storage/: __init__.py  models.py
tests/: test_detection.py  test_policy.py  test_schema.py  test_scrapers.py
