[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-radar"
version = "0.1.0"
description = "Open-source observability for enterprise AI agent fleets — vendor-neutral, OTEL-native"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "stark256-spec" }]
keywords = [
    "opentelemetry", "observability", "ai-agents", "copilot", "llm",
    "enterprise", "anomaly-detection", "mlops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "numpy>=1.26",
    "tensorly>=0.8",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
agent-radar = "agent_radar.cli:app"
agent-radar-api = "agent_radar.api.main:run"

[project.urls]
Homepage = "https://github.com/stark256-spec/agent-radar"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_radar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
